--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap Links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Font Awesome Links -->
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="style.css">
     <title>Jess Portfolio</title>
 </head>
 
@@ -20,18 +24,21 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Navbar Links -->
             <ul class="navbar-nav mr-auto">
+                <!-- Home Link -->
                 <li class="nav-item active">
                     <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
+                <!-- About Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="#about-me">About Me</a>
                 </li>
+                <!-- Project Dropdown Links -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Projects
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -41,9 +48,10 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
+                <!-- Project Video Dropdown Links -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Videos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -53,58 +61,114 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
+                <!-- Connect Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="#connect">Connect</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <!-- Jumbotron -->
-    <div id = "home" class="jumbotron jumbotron-fluid">
+    <!-- End of Navbar -->
+    <!-- Welcome Jumbotron -->
+    <div id="home" class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4 animated fadeInDown">JESSICA MCCORMACK</h1>
-            <p><span id = "intro-text"></span><span class="animated infinite flash">|</span></p>
+            <div class="d-flex justify-content-center">
+                <h1 class="display-4 animated fadeInDown">JESSICA MCCORMACK</h1>
+            </div>
+            <div class="d-flex justify-content-center">
+                <h4><span id="intro-text"></span><span class="animated infinite flash">|</span></h4>
+            </div>
         </div>
     </div>
+    <!-- End Of Welcome Jumbotron -->
     <!-- About Me Section -->
-    <div id="about-me">
-        <img class = "portfolio-photo" src="https://via.placeholder.com/150">
-        <h1>About Me</h1>
-        <p>This is there my About Me will go</p>
-    </div>
-    <!-- Services Section -->
-    <div id="services">
-        <h1>Services</h1>
-        <p>This is there my services will go</p>
-    </div>
-    <!-- Technologies Section -->
-    <div id="technologies">
-        <h1>Technologies</h1>
-        <p>This is there my services will go</p>
-    </div>
-    <!-- Projects Section -->
-    <div id="projects">
-        <h1>Projects</h1>
-        <p>This is there my Projects will go</p>
-    </div>
-    <!-- Videos Section -->
-    <div id="videos">
-        <h1>videos</h1>
-        <p>This is there my Videos will go</p>
-    </div>
-    <!-- Connect Section -->
-    <div id="connect">
-        <h1>Connect</h1>
-        <p>This is there my connect will go</p>
+    <div class="container">
+        <div id="about-me">
+            <!-- <span><img class="portfolio-photo" src="https://via.placeholder.com/150"></span> -->
+            <h2>About Me</h2>
+            <h5>Hi, I'm Jessica McCormack! I'm a Nashville, TN based Web Designer & Full Stack Developer focused on
+                creating clean, responsive web designs!</h5>
+
+        </div>
+        <!-- End Of About Me Section -->
+        <!-- Skill Bar -->
+        <!-- Bar 1 HTML -->
+        <div class="progress mb-3 progress-box d-flex justify-content-between" style="height:30px;">
+            <div class="animated slideInLeft progress-bar bg-success" role="progressbar" style="width: 85%"
+                aria-valuenow="85" data-percent="90%" aria-valuemin="0" aria-valuemax="100"><span
+                    class="progress-title">HTML</span>
+            </div>
+            <div class="progress-percent">95%</div>
+        </div>
+        <!-- Bar 2 CSS -->
+        <div class="progress mb-3 progress-box d-flex justify-content-between" style="height:30px;">
+            <div class="animated slideInLeft progress-bar bg-info" role="progressbar" style="width: 75%"
+                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="progress-title">CSS</span>
+            </div>
+            <div class="progress-percent">85%</div>
+        </div>
+        <!-- Bar 3 Javascript -->
+        <div class="progress mb-3 progress-box d-flex justify-content-between" style="height:30px;">
+            <div class="animated slideInLeft progress-bar bg-warning" role="progressbar" style="width: 65%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span class="progress-title">Javascript</span>
+            </div>
+            <div class="progress-percent">75%</div>
+        </div>
+        <!-- Bar 4 JQuery -->
+        <div class="progress mb-3 progress-box d-flex justify-content-between" style="height:30px;">
+            <div class="animated slideInLeft progress-bar bg-danger" role="progressbar" style="width: 55%"
+                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><span class="progress-title">JQuery</span>
+            </div>
+            <div class="progress-percent">75%</div>
+        </div>
+        <!-- End Of Skill Bar -->
+        <!-- Libraries Icons -->
+        <div></div>
+        <!-- End of Libraries Icons -->
+        <!-- Technologies Section -->
+        <div id="technologies">
+            <h2>Technologies</h2>
+            <p>This is there my services will go</p>
+        </div>
+        <!-- End of Technologies Section -->
+        <!-- Services Section -->
+        <div id="services">
+            <h2>Services</h2>
+            <p>This is there my services will go</p>
+        </div>
+        <!-- End of Services Section -->
+        <!-- Projects Section -->
+        <div id="projects">
+            <h2>Projects</h2>
+            <p>This is there my Projects will go</p>
+        </div>
+        <!-- End Of Projects Section -->
+        <!-- Videos Section -->
+        <div id="videos">
+            <h2>videos</h2>
+            <p>This is there my Videos will go</p>
+        </div>
+        <!-- End of Videos Section -->
+        <!-- Connect Section -->
+        <div id="connect">
+            <h2>Connect</h2>
+            <p>This is there my connect will go</p>
+        </div>
+        <!-- End of Connect Section -->
     </div>
 
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+<!-- Bootstrap Links -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-<script src = "app.js" ></script>
+<!-- Javascript Link -->
+<script src="app.js"></script>
 
 </html>
