--- a/index.html
+++ b/index.html
@@ -10,84 +10,42 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Font Awesome Links -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
     <title>Jess Portfolio</title>
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Navbar Links -->
-            <ul class="navbar-nav mr-auto">
-                <!-- Home Link -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <!-- About Link -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#about-me">About Me</a>
-                </li>
-                <!-- Project Dropdown Links -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Projects
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#projects">Project1</a>
-                        <a class="dropdown-item" href="#projects">Project2</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <!-- Project Video Dropdown Links -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Videos
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#videos">Project1</a>
-                        <a class="dropdown-item" href="#videos">Project2</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <!-- Connect Link -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#connect">Connect</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- End of Navbar -->
+
     <!-- Welcome Jumbotron -->
-    <div id="home" class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="d-flex justify-content-center">
-                <h1 class="display-4 animated fadeInDown">JESSICA MCCORMACK</h1>
-            </div>
-            <div class="d-flex justify-content-center">
-                <h4><span id="intro-text"></span><span class="animated infinite flash">|</span></h4>
+    <div id="home" class="jumbotron" style="height:42rem">
+        <div id="background-img">
+            <div class="container">
+                <div class="d-flex justify-content-center">
+                    <h1 class="display-4 animated fadeInDown" style="padding-top: 7rem;">JESSICA MCCORMACK</h1>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <h4><span id="intro-text"></span><span class="animated infinite flash">|</span></h4>
+
+                </div>
+                <i id="moveDown"
+                    class="fa fa-chevron-down fa-3x animated infinite bounce d-flex justify-content-center">
+                    <a href="#about-me"></a>
+                </i>
             </div>
         </div>
+
     </div>
     <!-- End Of Welcome Jumbotron -->
     <!-- About Me Section -->
     <div class="container">
         <div id="about-me">
             <!-- <span><img class="portfolio-photo" src="https://via.placeholder.com/150"></span> -->
-            <h2>About Me</h2>
-            <h5>Hi, I'm Jessica McCormack! I'm a Nashville, TN based Web Designer & Full Stack Developer focused on
-                creating clean, responsive web designs!</h5>
+            <h2>ABOUT ME</h2>
+            <p>Hi, I'm Jessica McCormack! I'm a Nashville, TN based Web Designer & Full Stack Developer focused on
+                creating clean, responsive web designs!</p>
 
         </div>
         <!-- End Of About Me Section -->
@@ -121,37 +79,104 @@
             </div>
             <div class="progress-percent">75%</div>
         </div>
+        <!-- Bar 4 Illustrator -->
+        <div class="progress mb-3 progress-box d-flex justify-content-between" style="height:30px;">
+            <div class="animated slideInLeft progress-bar bg-success" role="progressbar" style="width: 55%"
+                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><span
+                    class="progress-title">Illustrator</span>
+            </div>
+            <div class="progress-percent">75%</div>
+        </div>
+        <!-- Bar 4 React -->
+        <div class="progress mb-3 progress-box d-flex justify-content-between" style="height:30px;">
+            <div class="animated slideInLeft progress-bar bg-info" role="progressbar" style="width: 55%"
+                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><span class="progress-title">React</span>
+            </div>
+            <div class="progress-percent">75%</div>
+        </div>
         <!-- End Of Skill Bar -->
         <!-- Libraries Icons -->
         <div></div>
         <!-- End of Libraries Icons -->
         <!-- Technologies Section -->
         <div id="technologies">
-            <h2>Technologies</h2>
-            <p>This is there my services will go</p>
+            <h2>TECHNOLOGIES</h2>
+            <div class=technology-icons>
+                <div class="row">
+                    <div class="col">
+                        <i class="fab fa-react fa-7x animated slideInLeft"></i>
+                        <i class="fab fa-js fa-7x animated slideInDown"></i>
+                        <i class="fab fa-node fa-7x animated slideInRight"></i>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <i class="fab fa-html5 fa-7x animated slideInLeft"></i>
+                        <i class="fab fa-bootstrap fa-7x animated slideInLeft"></i>
+                        <i class="fab fa-css3-alt fa-7x animated slideInRight"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <i class="fab fa-github fa-7x animated slideInLeft"></i>
+                        <i class="fab fa-adobe fa-7x animated slideInUp"></i>
+                        <i class="fab fa-wordpress-simple fa-7x animated slideInRight"></i>
+                    </div>
+                </div>
+
+            </div>
         </div>
         <!-- End of Technologies Section -->
-        <!-- Services Section -->
-        <div id="services">
-            <h2>Services</h2>
-            <p>This is there my services will go</p>
-        </div>
-        <!-- End of Services Section -->
         <!-- Projects Section -->
         <div id="projects">
-            <h2>Projects</h2>
+            <h2>PROJECTS</h2>
             <p>This is there my Projects will go</p>
+            <div class="bd-example">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="..." class="d-block w-100" alt="...">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
+                  </div>
         </div>
         <!-- End Of Projects Section -->
-        <!-- Videos Section -->
-        <div id="videos">
-            <h2>videos</h2>
-            <p>This is there my Videos will go</p>
-        </div>
-        <!-- End of Videos Section -->
         <!-- Connect Section -->
         <div id="connect">
-            <h2>Connect</h2>
+            <h2>CONNECT</h2>
             <p>This is there my connect will go</p>
         </div>
         <!-- End of Connect Section -->
